--- a/src/layouts/Footer/style.scss
+++ b/src/layouts/Footer/style.scss
@@ -2,7 +2,7 @@
 
 .Footer {
   background-color: var(--BG_GRADIENT_L0);
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
